# Cold-Email-Automation

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  cicd-no-docker.txt  main.yml
app/: chain.py  main.py  portfolio.py
app/logs/: logger.py
app/vectorstore/: chroma.sqlite3
backend/: Dockerfile  chain.py  main.py  metrics.py  portfolio.py  requirements.txt  routes.py
backend/logs/: logger.py
backend/resource/: my_portfolio.csv
docker/: .dockerignore  Dockerfile  docker-compose.yml
docker/nginx/: Dockerfile  entrypoint.sh
docker/nginx/config/: dev.conf  prod.conf
frontend/: Dockerfile  main.py
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml
monitoring/: loki-config.yaml  prometheus.yml  promtail-config.yaml
monitoring/prometheus/: prometheus.yml
nginx/: Dockerfile  entrypoint.sh  nginx.conf
nginx/config/: dev.conf  prod.conf
tests/: test_utils.py
vectorstore/: chroma.sqlite3
