[project]
name = "cold-email-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==25.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "altair==5.5.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "asgiref==3.11.0",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "backoff==2.2.1",
    "bcrypt==5.0.0",
    "beautifulsoup4==4.14.3",
    "blinker==1.9.0",
    "build==1.3.0",
    "cachetools==5.5.2",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "chardet==5.2.0",
    "charset-normalizer==3.4.4",
    "chroma-hnswlib==0.7.3",
    "chromadb==0.5.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "comm==0.2.3",
    "cryptography==46.0.3",
    "dataclasses-json==0.6.7",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "deprecated==1.3.1",
    "distro==1.9.0",
    "durationpy==0.10",
    "emoji==2.15.0",
    "executing==2.2.1",
    "fastapi==0.124.0",
    "filelock==3.20.0",
    "filetype==1.2.0",
    "flatbuffers==25.9.23",
    "frozenlist==1.8.0",
    "fsspec==2025.12.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "google-auth==2.43.0",
    "googleapis-common-protos==1.72.0",
    "greenlet==3.3.0",
    "groq==0.37.1",
    "grpcio==1.76.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "huggingface-hub==1.2.1",
    "humanfriendly==10.0",
    "idna==3.11",
    "importlib-metadata==8.4.0",
    "importlib-resources==6.5.2",
    "ipykernel==7.1.0",
    "ipython==9.8.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "kubernetes==34.1.0",
    "langchain==0.2.14",
    "langchain-community==0.2.12",
    "langchain-core==0.2.43",
    "langchain-groq==0.1.9",
    "langchain-text-splitters==0.2.4",
    "langdetect==1.0.9",
    "langsmith==0.1.147",
    "lxml==6.0.2",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "marshmallow==3.26.1",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mmh3==5.2.0",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "mypy-extensions==1.1.0",
    "narwhals==2.13.0",
    "nest-asyncio==1.6.0",
    "nltk==3.9.2",
    "numpy==1.26.4",
    "oauthlib==3.3.1",
    "onnxruntime==1.20.1",
    "opentelemetry-api==1.27.0",
    "opentelemetry-exporter-otlp-proto-common==1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.27.0",
    "opentelemetry-instrumentation==0.48b0",
    "opentelemetry-instrumentation-asgi==0.48b0",
    "opentelemetry-instrumentation-fastapi==0.48b0",
    "opentelemetry-proto==1.27.0",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-semantic-conventions==0.48b0",
    "opentelemetry-util-http==0.48b0",
    "outcome==1.3.0.post0",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandas==2.0.2",
    "parso==0.8.5",
    "pillow==10.4.0",
    "platformdirs==4.5.1",
    "posthog==7.0.1",
    "prometheus-client>=0.23.1",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "protobuf==4.25.8",
    "psutil==7.1.3",
    "pure-eval==0.2.3",
    "pyarrow==22.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydeck==0.9.1",
    "pygments==2.19.2",
    "pypdf==6.4.0",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "pyreadline3==3.5.4",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.0",
    "python-iso639==2025.11.16",
    "python-magic==0.4.27",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "rapidfuzz==3.14.3",
    "referencing==0.37.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==13.9.4",
    "rpds-py==0.30.0",
    "rsa==4.9.1",
    "selenium==4.21.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8",
    "sqlalchemy==2.0.44",
    "stack-data==0.6.3",
    "starlette==0.50.0",
    "streamlit==1.35.0",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "tenacity==8.5.0",
    "tokenizers==0.22.1",
    "toml==0.10.2",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "trio==0.32.0",
    "trio-websocket==0.12.2",
    "typer==0.20.0",
    "typer-slim==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "unstructured==0.14.6",
    "unstructured-client==0.42.4",
    "urllib3==2.3.0",
    "uv==0.9.16",
    "uvicorn==0.38.0",
    "watchdog==6.0.0",
    "watchfiles==1.1.1",
    "wcwidth==0.2.14",
    "websocket-client==1.9.0",
    "websockets==15.0.1",
    "wrapt==1.17.3",
    "wsproto==1.3.2",
    "yarl==1.22.0",
    "zipp==3.23.0",
]
